syntax = "proto3";
option go_package = "proto/message/;message";

import "google/protobuf/empty.proto";

enum MessageType {
    MESSAGEQUEUE = 0;
    MESSAGETOPIC = 1;
}

 message MessageRequest {
    string name = 2;
    MessageType type = 3;
	string payload = 4;
}

message ConsumeMessageRequest {
    string name = 1;
    MessageType type = 2;
    string ip = 3;
}

message ConsumeMessageResponse {
    string payload = 1;
    string ip = 2;
}

service MessageService {

    rpc AddMessage(MessageRequest) returns (google.protobuf.Empty) {};
    rpc RemoveMessage(MessageRequest) returns (google.protobuf.Empty) {};
    rpc ConsumeMessage(stream ConsumeMessageRequest) returns (stream ConsumeMessageResponse) {};
}
